--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,11 @@
             <artifactId>h2</artifactId>
             <version>1.4.200</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+            <version>1.18.10</version>
+        </dependency>
     </dependencies>
 </project>
